Add double quantity button

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -86,6 +86,7 @@ template-{{ template.name | handle }} {{ template.name }}-{{ template.suffix }} 
 
   <script src="{{ 'quick-view.min.js' | asset_url }}" defer="defer"></script>
   <script src="{{ 'product-card-swatch.min.js' | asset_url }}" defer="defer"></script>
+  <script src="{{ 'double-quantity.js' | asset_url }}" defer="defer"></script>
 
 
  {% render "reviews-importer-popup" %}
