--- a/snippets/theme-data.liquid
+++ b/snippets/theme-data.liquid
@@ -59,6 +59,7 @@ window.ConceptSGMStrings = {
   available: "{% render 'new-locale', key: 'products.product.available' %}",
   preorder: "{% render 'new-locale', key: 'products.product.preorder' %}",
   not_enough_item_message: "{{ 'products.product.not_enough_items_message' | t: quantity: '__inventory_quantity__' }}",
+  max_items_message: "{{ 'products.product.max_items_message' | t: quantity: '__inventory_quantity__' }}",
   sold_out_items_message: "{{ 'products.product.sold_out_items_message' | t }}",
   unitPrice: {{ 'products.product.unit_price_label' | t | json }},
   unitPriceSeparator: {{ 'general.accessibility.unit_price_separator' | t | json }}
