--- a/snippets/product-qty-input.liquid
+++ b/snippets/product-qty-input.liquid
@@ -30,4 +30,15 @@
     >
         <svg class="w-[12px] h-[12px]" fill="currentColor" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M376 232H216V72c0-4.42-3.58-8-8-8h-32c-4.42 0-8 3.58-8 8v160H8c-4.42 0-8 3.58-8 8v32c0 4.42 3.58 8 8 8h160v160c0 4.42 3.58 8 8 8h32c4.42 0 8-3.58 8-8V280h160c4.42 0 8-3.58 8-8v-32c0-4.42-3.58-8-8-8z"/></svg>
     </button>
+    <button
+            class="quantity-input__button flex items-center justify-center h-[46px] w-[46px]"
+            type="button"
+            aria-label="{{ 'products.product.double_quantity' | t: title: product.title }}"
+            data-double-quantity
+            data-product-id="{{ product.id }}"
+            name="double"
+    >
+        &times;2
+    </button>
 </quantity-input>
+<p class="quantity-input__message text-xs text-red-600 mt-1 hidden" data-qty-warning></p>
